--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,6 +10,8 @@
 <section>
 	<div class="container-fluid mt-4">
         <div class="jumbotron">
+
+        	<h2 style="margin-left: 300px;"> RECHERCHER UN LIVRE</h2>
         	<div class="container-fluid custom-container" id="recherche">
         		 <form class="d-flex">
                <div class="row"style="margin-right:50px;">
