--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
             <li><a class="dropdown-item" href="{{ path('book_new') }}">Ajouter un livres</a></li>
             <li><a class="dropdown-item" href="{{ path('user_new') }}">Ajouter un auteur</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="{{ path('categorys_new') }}">Ajouter un categorie</a></li>
+            <li><a class="dropdown-item" href="{{ path('categorys_new') }}">Ajouter une categorie</a></li>
           </ul>
         </li>
         
