search form troubleshoot

--- a/templates/home/search.html.twig
+++ b/templates/home/search.html.twig
@@ -24,7 +24,7 @@
                          <div class="btn color-12 size-1 ">
                               <div id="pays" class="btn color-3 size-1  "  >
 
-                                   {{ form_row(SearchBookType.livre ) }}
+                                   {{ form_row(SearchBookType.nomLivre ) }}
 
 
                               </div>
@@ -32,7 +32,7 @@
                               <div id="ville"class="btn color-3 size-1" >
 
 
-                                   {{ form_row(SearchBookType.user) }}
+                                   {{ form_row(SearchBookType.auteur) }}
 
                               </div>
                                <div id="ville"class="btn color-3 size-1" >
