--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,13 +22,11 @@
         
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Gestion Bibliotheque
+            Ajouter Livre
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="{{ path('book_new') }}">Ajouter un livres</a></li>
-            <li><a class="dropdown-item" href="{{ path('user_new') }}">Ajouter un auteur</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="{{ path('categorys_new') }}">Ajouter une categorie</a></li>
+            <li><a class="dropdown-item" href="{{ path('book_new') }}">Ajouter livres</a></li>
+            
           </ul>
         </li>
         
