--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,7 +11,7 @@
 	<div class="container-fluid mt-4">
         <div class="jumbotron">
 
-        	<h2 style="margin-left: 300px;"> RECHERCHER UN LIVRE</h2>
+        	<h2 style="margin-left: 300px;">{% trans %} SEARCH FOR A BOOK!{% endtrans %}</h2>
         	<div class="container-fluid custom-container" id="recherche">
         <form class="d-flex">
                <div class="row"style="margin-right:50px;">
@@ -88,6 +88,7 @@
                 <th>Livre</th>
                 <th>Date</th>
                 <th>Auteur</th>
+                <th>Date De Naissance Auteur</th>
                 <th>Categorie</th>
                  <th>actions</th>
             </tr>
@@ -101,6 +102,14 @@
                 <td>
                     {{ book.user }}
                 </td>
+
+                <td>{% for user in user %}
+
+					
+                    {{ user.dateDeNaissance ? user.dateDeNaissance|date('Y-m-d') : '' }}
+                    
+                </td>
+                 {% endfor %}
                 <td>
                     {{ book.categorie }}
                 </td>
